--- a/public/index.html
+++ b/public/index.html
@@ -3,31 +3,47 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
+
+
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
+		<meta name="viewport" content="initial-scale=1, maximum-scale=1">
+		
+		<meta name="keywords" content="SVG, AudioAPI, Web development, REACT, UI design, PHP, Javascript, HTML5" />
+		<meta name="author" content="Omar Alshaker" />
+		<meta name="copyright" content="© Copyright 2016 - Omar Alshaker" />
+
+		<!-- Robots -->
+		<meta name="robots" content="index, follow" />
+		<meta name="location" content="Warsaw, Poland" />
+		<link rel="icon" type="image/png" href="/images/favicon.ico" />
+
+		<!-- Facebook meta -->
+		<meta property="og:image" content="%PUBLIC_URL%/fb-thumb.jpg" />
+		<meta property="og:url" content="https://alshakero.github.io/matilda" />
+		<meta property="og:title" content="Omar Alshaker - Personal Website" />
+		<meta property="og:site-name" content="Omar Alshaker - Personal Website"/>
+		<meta name="description" content="Omar Alshaker - Front End Developer - Based in Warsaw. "/>
+
+		<!-- Twitter meta -->
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:site" content="@alshakero" />
+		<meta name="twitter:creator" content="@alshakero" />
+		<meta name="twitter:title"  content="https://alshakero.github.io/matilda" />
+		<meta name="twitter:description" content="Omar Alshaker - Front End Developer - Based in Warsaw." />
+		<meta name="twitter:image:src" content="%PUBLIC_URL%/fb-thumb.jpg" />
+
+		<!-- GOOGLE Share -->
+		<meta itemprop="name" content="Omar Alshaker - Personal Website" />
+		<meta itemprop="description" content="Omar Alshaker - Front End Developer - Based in Warsaw." />
+		<meta itemprop="image" content="%PUBLIC_URL%/fb-thumb.jpg" />
+
+
 
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <!--
-      Notice the use of %PUBLIC_URL% in the tag above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
     <title>React App</title>
   </head>
   <body>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start`.
-      To create a production bundle, use `npm run build`.
-    -->
   </body>
 </html>
