--- a/public/index.html
+++ b/public/index.html
@@ -20,28 +20,28 @@
 
 		<!-- Facebook meta -->
 		<meta property="og:image" content="%PUBLIC_URL%/fb-thumb.jpg" />
-		<meta property="og:url" content="https://alshakero.github.io/matilda" />
-		<meta property="og:title" content="Matilda - SVG Expirement - Omar Alshaker" />
-		<meta property="og:site-name" content="Matilda - SVG Expirement - Omar Alshaker"/>
+		<meta property="og:url" content="https://alshakero.github.io/Mathilda" />
+		<meta property="og:title" content="Mathilda - SVG Expirement - Omar Alshaker" />
+		<meta property="og:site-name" content="Mathilda - SVG Expirement - Omar Alshaker"/>
 		<meta name="description" content="A little interactive Matlida from Léon: The Professional"/>
 
 		<!-- Twitter meta -->
 		<meta name="twitter:card" content="summary_large_image" />
 		<meta name="twitter:site" content="@alshakero" />
 		<meta name="twitter:creator" content="@alshakero" />
-		<meta name="twitter:title"  content="https://alshakero.github.io/matilda" />
+		<meta name="twitter:title"  content="https://alshakero.github.io/Mathilda" />
 		<meta name="twitter:description" content="A little interactive Matlida from Léon: The Professional" />
 		<meta name="twitter:image:src" content="%PUBLIC_URL%/fb-thumb.jpg" />
 
 		<!-- GOOGLE Share -->
-		<meta itemprop="name" content="Matilda - SVG Expirement - Omar Alshaker" />
+		<meta itemprop="name" content="Mathilda - SVG Expirement - Omar Alshaker" />
 		<meta itemprop="description" content="A little interactive Matlida from Léon: The Professional" />
 		<meta itemprop="image" content="%PUBLIC_URL%/fb-thumb.jpg" />
 
 
 
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <title>Matilda - SVG Expirement - Omar Alshaker</title>
+    <title>Mathilda - SVG Expirement - Omar Alshaker</title>
   </head>
   <body>
     <div id="root"></div>
